# trial_tasks

./: README.md  pyproject.toml
tasks/: app.py
tasks/public/: index.html
tasks/task_one/: parse_xml.py
tasks/task_two/: handle_patient_data.py
tasks/tests/: example.xml  test_task_one.py  test_task_two.py  test_tokens.py
tests/: example.xml  test_tokens.py
trial_tasks/task_one/: parse_xml.py
