[tool.poetry]
name = "trial-task"
version = "1.0"
description = "Trial task for PIT-M3D"
authors = ["Max Phillips"]

[tool.poetry.dependencies]
python = "^3.9"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pydocstyle = "^5.1.1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
